# aadi-yogi

./: .arah-version  .gitignore  .mcp.json  AGENTS.md  BACKLOG.md  LICENSE.md  README.md  ROADMAP.md  arah.config.yaml  package.json  pyproject.toml
.agents/: choreography.aadi-yogi.yaml  choreography.domains.yaml
.agents/domain/: agent-api.agent.yaml  compliance.agent.yaml  consciousness-core.agent.yaml  darshan-ui.agent.yaml  evals-quality.agent.yaml  (+1 more)
.consciousness/: README.md  link.yaml
.sky/: link.yaml
data/: README.md
docs/: agent_design.md  architecture.md  consciousness_plugin.md  content_import_roadmap.md  copyright_policy.md  darshan_interface_concept.md  darshan_interface_spec.md  digitalization_pipeline.md  editorial_guidelines.md  evaluation_strategy.md  markdown_schema.md  passage_id_scheme.md  production_review_checklist.md  production_setup.md  project_vision.md  source_import_status.md  source_policy.md
schemas/: response_envelope.schema.json
scripts/: README.md  run_production_pipeline.sh
site/: index.html
spec/: README.md  c4-model.md  market-benchmark.yaml  sky-merits.yaml
tests/: README.md  test_api_smoke.py  test_consciousness_plugin.py  test_contract.py  test_evals.py  test_health_gate.py  test_health_tier.py  test_import_ta_wikisource.py  test_import_wikisource_sbe.py  test_import_wikisource_upanishads.py  test_inquiry_credit_flow.py  test_inquiry_credits.py  test_inquiry_policy.py  test_inquiry_quota.py  test_library_catalog.py  test_pipeline_and_agent.py  test_validate_markdown.py  test_vector_and_llm.py  test_witness.py
(+3780 files in other folders)
