[project]
name = "aadi-yogi"
version = "0.1.0"
description = "Source-grounded spiritual knowledge repository and AI consciousness architecture."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=.tmp_pytest -p no:cacheprovider"

[tool.ruff]
line-length = 100
